--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
       <section id="imagenesCoders">
 
         <div class="container">
-          <img src="assets/img/alumna01.jpg" class="opacity ">
+          <img src="assets/img/alum01.jpg" class="opacity"/>
           <div class="bottomright">Karla Nava</div>
         </div>
 
         <div class="container">
-          <img src="assets/img/alumna02.jpg" class="opacity">
+          <img src="assets/img/alum02.jpg" class="opacity"/>
           <div class="bottomright">Ana Salazar</div>
         </div>
 
         <div class="container">
-        <img src="assets\img\alumna03.jpg" class="opacity ">
+          <img src="assets/img/alum03.jpg" class="opacity"/>
           <div class="bottomright">Any Flores</div>
         </div>
 
         <div class="container">
-          <img src="assets/img/alumna04.jpg" class="opacity ">
+          <img src="assets/img/alum04.jpg" class="opacity"/>
           <div class="bottomright">Gochi</div>
         </div>
 
         <div class="container">
-          <img src="assets/img/alumna05.jpg" class="opacity ">
+          <img src="assets/img/alum05.jpg" class="opacity"/>
           <div class="bottomright">ADri HY</div>
         </div>
 
         <div class="container">
-          <img src="assets/img/alumna06.jpg" class="opacity ">
+          <img src="assets/img/alum06.jpg" class="opacity"/>
           <div class="bottomright">Clau</div>
         </div>
 
