--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p>Nuestras coders</p>
       <div class="divisor"></div>
 
-      <section id="imagenesCoders">
+      <section id="imagenesCoder">
 
         <div class="container">
           <img src="assets/img/alum01.jpg" class="opacity"/>
@@ -27,6 +27,8 @@
           <div class="bottomright">Any Flores</div>
         </div>
 
+      </section>
+      <section id="imagenesCoders">
         <div class="container">
           <img src="assets/img/alum04.jpg" class="opacity"/>
           <div class="bottomright">Gochi</div>
@@ -34,16 +36,30 @@
 
         <div class="container">
           <img src="assets/img/alum05.jpg" class="opacity"/>
-          <div class="bottomright">ADri HY</div>
+          <div class="bottomright">Adri HY</div>
         </div>
 
         <div class="container">
           <img src="assets/img/alum06.jpg" class="opacity"/>
-          <div class="bottomright">Clau</div>
+          <div class="bottomright">Clauss Frank</div>
+        </div>
+
+      </section>
+      <section id="imagenesCoders">
+
+        <div class="container">
+          <img src="assets/img/alumn07.jpg" class="opacity"/>
+          <div class="bottomright">Shaz Ha Tovar</div>
         </div>
 
 
+        <div class="container">
+          <img src="assets/img/alum08.jpg" class="opacity"/>
+          <div class="bottomright">Brenda GUTIMU</div>
+        </div>
       </section>
+
+
 
 
     </section>
