--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <section id="nuestrasCoders">
       <p>Nuestras coders</p>
+      <img src="assets/img/logo.png" alt="" class="logo">
       <div class="divisor"></div>
+
 
       <section id="imagenesCoder">
 
@@ -58,9 +60,6 @@
           <div class="bottomright">Brenda GUTIMU</div>
         </div>
       </section>
-
-
-
 
     </section>
 
